# Non-linear-optimization

./: .gitignore  CMakeLists.txt  README.md  linear_algebra.hh  main.cpp  otimizacao_restrita.py  restricted-optimization.hh  restricted-optimization.hpp
lib/: linear_algebra_debug.lib
