CMAKE_MINIMUM_REQUIRED (VERSION 3.12)

SET (CMAKE_CXX_STANDARD 20)

SET (CMAKE_DEBUG_POSTFIX d)

SET (PROJECT_NAME "non-linear-optimization")

PROJECT (${PROJECT_NAME})

ADD_EXECUTABLE (${PROJECT_NAME} main.cpp)

SET_TARGET_PROPERTIES (${PROJECT_NAME} 
    PROPERTIES 
    DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
    RELEASE_POSTFIX ""
)

FIND_LIBRARY (linalg linear_algebra PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../out/)

IF(NOT linalg)
    MESSAGE(FATAL_ERROR "Linear algebra library not found.")
ENDIF()

TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${linalg})